@@ -1,27 +1,79 @@
 # Simulador SIC/XE
-Este programa simula um sistema SIC/XE em Java. Ele possui as funções de construção de memória, registradores, um analisador sintático, um console e um interpretador.
 
-Para executar o simulador, digite 'analisar_arq (arquivo com extensão)'.  
-Depois digite 'iniciar' para atribuir endereços a cada instrução.  
-Depois digite 'prox' para avançar pelas instruções.
+Este programa simula um sistema SIC/XE utilizando uma interface gráfica desenvolvida em Java. O simulador implementa gerenciamento de memória e registradores, além de uma interface visual para acompanhamento da execução do programa. O projeto utiliza Gradle para build e gerenciamento de dependências.
 
-Você também pode:  
-Digitar 'visualizar_reg (qualquer registrador)' a qualquer momento para ver o valor nesse registrador específico.  
-Digitar 'visualizar_mem (endereço)' para ver os dados armazenados em um local de memória específico.  
-Digitar 'alterar_mem (endereço) (valor do byte)' para alterar o valor do byte em um endereço de memória específico.  
-Digitar 'alterar_reg (registrador) (valor hexadecimal de seis dígitos)' para alterar o valor em um registrador específico.  
-Digitar 'parar' para interromper o programa.  
-Digitar 'creditos' para ver os créditos do programa.  
-Digitar 'carregar_arq' para importar uma memória existente de um arquivo de texto.  
-Digitar 'salvar_arq' para exportar a memória existente para um arquivo de texto.  
-Digitar 'exit' para sair da simulação.
+## Requisitos
 
-Você também pode digitar 'help' para ver a lista de comandos.
+- **JDK 21** ou superior
+- **Gradle 8+** (não é necessário instalá-lo separadamente, pois o projeto usa o Gradle Wrapper)
 
-## Créditos
-Arthur Alves - Organização, discussão, ajustes.
-Fabricio Bartz - Organização, discussão, ajustes.  
-Gabriel Moura - Construção, definição e ajustes dos registradores e memória.  
-Leonardo Braga - Ajustes nas flags de operações.  
-Luis Eduardo Rasch - Construção e ajuste do console, leitura e analise dos arquivos, e testes.  
-Renan Pinho - Construção das instruções e simulador, ajustes em todo o código e transpiler.
+## Build e Execução
+
+### 1. Clonando o Repositório
+
+Clone o repositório para sua máquina:
+
+```bash
+git clone https://github.com/seu-usuario/SIC-XE-Simulator.git
+cd SIC-XE-Simulator
+```
+
+### 2. Build e Execução com Gradle Wrapper
+
+Para compilar e executar o simulador, utilize o Gradle Wrapper. Isso garantirá que todas as dependências (incluindo JavaFX) sejam resolvidas corretamente.
+
+- **No Linux/Mac:**
+
+  ```bash
+  ./gradlew run
+  ```
+
+- **No Windows:**
+
+  ```bash
+  gradlew.bat run
+  ```
+
+O comando acima compila o projeto e inicia a aplicação, executando a função `main` definida no seu projeto.
+
+### 3. Gerando o JAR Executável
+
+Se desejar gerar um JAR executável, utilize:
+
+```bash
+./gradlew jar
+```
+
+O JAR gerado estará na pasta `build/libs`. Para executá-lo, use:
+
+```bash
+java --module-path "caminho/para/javafx/lib" --add-modules javafx.controls,javafx.fxml,javafx.media -jar build/libs/SIC-XE-Simulator.jar
+```
+
+> **Observação:** Se você configurou o `applicationDefaultJvmArgs` no `build.gradle`, o JAR pode já estar preparado para rodar sem especificar o `--module-path`.
+
+## Estrutura do Projeto
+
+```
+SIC-XE-Simulator/
+├── src/
+│   ├── main/
+│   │   ├── java/
+│   │   │   └── sicxesimulator/...
+│   │   └── resources/
+│   │       └── darkmode.css
+│   └── test/
+│       └── java/...
+├── build.gradle
+├── settings.gradle
+├── gradlew
+├── gradlew.bat
+├── .gitignore
+├── README.md
+└── (outros arquivos de configuração)
+```
+
+## Licença
+
+Este projeto é licenciado sob a [MIT License](LICENSE).
+
